# www.gdcc.io

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: static.yml
source/: about.md  conf.py  events.md  index.md  members.md  news.md  services.md  sign-up.md  test-2025-05-24.md  working-groups.md
source/working-groups/: containerization.md  documentation.md  internationalization.md  large-data-support.md  pydataverse.md  sensitive-data.md
